--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
 </head>
 
 <body>
-  <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
-    <img src="./images/1.jpeg" class="w-1/3 h-full">
-    <div class="w-full flex items-center justify-end">
-      <i class="material-icons">face</i>
-      <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
-    </div>
+  <div  id="EGOIST" class="pl-80 pt-20">
+    <div class="text-xl">Photo Gallery ( {{ countPhoto }} )</div>
+    <br>
+    <ul class="flex space-x-8">
+      <li v-for="(task,index) in photogallery">                           
+        {{task.dis}}        
+        <div v-show="task.done"><img class='h-4 w-4' src="./images/baseline_favorite_black_18dp.png"></div>        
+        <div v-on:click="toggleDone(index)" class="hover:opacity-80"> <img v-bind:src="task.src"></div>          
+      </li>
+    </ul>        
   </div>
 
   <!-- my main.js -->
